@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-31T08:27:37Z",
-  "count" : 2,
-  "count_minmax" : [ 2, 2 ],
-  "count_decinc" : [ -0, +2 ],
-  "uniques" : 2,
-  "uniques_minmax" : [ 2, 2 ],
-  "uniques_decinc" : [ -0, +2 ]
+  "timestamp" : "2022-06-01T01:58:24Z",
+  "count" : 5,
+  "count_minmax" : [ 2, 5 ],
+  "count_decinc" : [ -0, +5 ],
+  "uniques" : 4,
+  "uniques_minmax" : [ 2, 4 ],
+  "uniques_decinc" : [ -0, +4 ]
 }
