@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-05-31T16:29:39Z",
-  "count_outdated" : 2113,
-  "uniques_outdated" : 404,
-  "count" : 2147,
-  "uniques" : 427,
+  "timestamp" : "2022-06-01T01:58:24Z",
+  "count_outdated" : 2117,
+  "uniques_outdated" : 406,
+  "count" : 2153,
+  "uniques" : 430,
   "clones" : [
-    {
-      "timestamp": "2022-05-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 4 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ]
-    },
     {
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 1,
@@ -70,10 +63,10 @@
     },
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ]
+      "count": 5,
+      "count_minmax": [ 2, 5 ],
+      "uniques": 4,
+      "uniques_minmax": [ 2, 4 ]
     }
   ]
 }
