@@ -1,12 +1,7 @@
 {
-  "count": 34,
-  "uniques": 14,
+  "count": 36,
+  "uniques": 15,
   "clones": [
-    {
-      "timestamp": "2022-05-17T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 1,
@@ -49,8 +44,8 @@
     },
     {
       "timestamp": "2022-05-31T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 5,
+      "uniques": 4
     }
   ]
 }
